# tiramisu-be

./: CLAUDE.md  main.py  pyproject.toml  tiramisu.db
app/: config.py  db.py  deps.py  security.py
app/lib/: invite_code.py  split.py
app/models/: __init__.py  event.py  expense.py  group.py  invite.py  user.py
app/routers/: __init__.py  auth.py  dev.py  events.py  expenses.py  groups.py  invites.py  me.py  settlements.py
app/services/: events.py  otp.py
tests/: conftest.py  helpers.py  test_auth.py  test_dev.py  test_events.py  test_expenses.py  test_groups.py  test_invites.py  test_settlements.py  test_split_parity.py
